Dynamic Mode ☁️  | Clean code log => Debug Log 🌪️